[package]
name = "rux"
version = "0.1.0"
authors = ["Mikhail <mikhailethanram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rux"
path = "src/bin.rs"

[lib]
name = "rux"
path = "src/lib/lib.rs"

[dependencies]
num = "0.4.0"